# baribal

./: .gitignore  404.html  README.md  demo_glimpse.py  index.html  init-script.sh  objects.inv  pyproject.toml
.github/workflows/: main.yml
api/core/: index.html
api/utils/: index.html
demos/: demo_tabyl.py
docs/api/: utils.md
guide/installation/: index.html
guide/usage/: index.html
search/: search_index.json
src/: core.py
src/baribal/: __init__.py  core.py  utils.py  viz.py
tests/: test_core.py  test_memory_diet.py  test_tabyl.py
