[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baribal"
version = "0.1.0"
description = "Helper functions for pandas data analysis, inspired by R"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["pandas", "data-analysis", "r", "glimpse"]
authors = [
    { name = "Gaël Penessot", email = "gael.penessot@data-decision.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Data Science",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "UP", "N", "W", "D"]
ignore = ["D100", "D104"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "B", "S"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=baribal"
testpaths = [
    "tests",
]
